--- a/petrinet-algo/petrinet-algo.cabal
+++ b/petrinet-algo/petrinet-algo.cabal
@@ -23,3 +23,16 @@ library
                        text >=0.11 && <0.12
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite algo-tests
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      tests/
+  main-is:             Main.hs
+  build-depends:       base >=4.5.0,
+                       multiset ==0.2.2,    
+                       containers >=0.5,
+                       petrinet-core,
+                       petrinet-algo,
+                       mtl,
+                       HUnit >=1.2.5
+  default-language:    Haskell2010
